# ckanext-pnaig-oauth2

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/pnaig_oauth2/: __init__.py  cli.py  db.py  oauth2.py  plugin.py  views.py
ckanext/pnaig_oauth2/assets/: script.js  webassets.yml
ckanext/pnaig_oauth2/migration/pnaig_oauth2/: env.py
ckanext/pnaig_oauth2/migration/pnaig_oauth2/versions/: 001_create_user_token_table.py
ckanext/pnaig_oauth2/tests/: test_plugin.py
